--- a/index.html
+++ b/index.html
@@ -231,5 +231,15 @@ AIO73451.1	coppertranslocating Ptype ATPase 	Burkholderia multivorans	37.8	1	878
 	<script>
 		redraw();
 	</script>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-72531610-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	</body>
 	</html>
