--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		<option value="splitWords">Split word</option>
 		<option value="firstWord">First word</option>
 		<option value="fullPhrase">Full name</option>
+		<option value="family">Organism</option>
 		<option value="family">Family</option>
 		<option value="species">Species</option>
 		<option value="order">Order</option>
@@ -92,7 +93,10 @@
 	<div id="dendogram"><svg></svg></div>
 
 	<script type="text/javascript" src="d3.v4.min.js" charset="utf-8"></script>
-	<script>var d3v4 = d3;</script>
+	<script>
+		//avoid versions collision
+		var d3v4 = d3;
+	</script>
 	<script type="text/javascript" src="drawTree.js" ></script>
 	<script type="text/javascript" src="dendogram.js" ></script>
 
@@ -154,7 +158,7 @@ function redrawTree(data) {
 
 function redrawWordCloud(data) {
 	d3.select("#typeCount")
-		.on("change", function () { redrawWordCloud(); });
+		.on("change", function () { redraw(); });
 
 	console.log("redrawWordCloud");
 	var typeCount = d3.select("#typeCount").property("value");
@@ -175,13 +179,13 @@ function redrawWordCloud(data) {
 	data.forEach(function (d) {
 
 		if (typeCount === "splitWords") {
-			d.ORGANISM.split(" ").forEach(countAttr(d.SCORE));
+			d.NAME.split(" ").forEach(countAttr(d.SCORE));
 		} else if (typeCount === "firstWord") {
-			d.first = d.ORGANISM.split(" ")[0];
+			d.first = d.NAME.split(" ")[0];
 			countAttr(d.SCORE)(d.first);
 		} else if (typeCount === "fullPhrase") {
 				// FULL PHRASE
-				countAttr(d.SCORE)(d.ORGANISM);
+				countAttr(d.SCORE)(d.NAME);
 			} else {
 				countAttr(d.SCORE)(d[typeCount]);
 			}
