--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<option value="fullPhrase">Full name</option>
 	</select>
 	<div id="chart"></div>
+	<div id="icicle"></div>
 	<div id="tree"><svg></svg></div>
 	<div id="dendogram"><svg></svg></div>
 	<div id="table"></div>
