--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<option value="fullPhrase">Full name</option>
 	</select>
 	<div id="chart"></div>
-	<div id="icicle"></div>
+	<div id="icicle" class="icicle"></div>
 	<div id="tree"><svg></svg></div>
 	<div id="dendogram"><svg></svg></div>
 	<div id="table"></div>
@@ -43,9 +43,10 @@
 	<script type="text/javascript" src="CSVToTree.js" charset="utf-8"></script>
 
 	<script type="text/javascript" src="main.js" charset="utf-8"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
 	<div>
 	<h2>Data:</h2>
-		<button id="btnRefresh" onClick="redraw()">Refresh</button>
+		<button id="btnRefresh" onClick="start()">Refresh</button>
 		<br>
 		<br>
 		<label for="textEntry">Copy and paste here your TSV</label>
@@ -105,7 +106,7 @@ YP_784332.1	hypothetical protein CRV142 	Nile crocodilepox virus	47	1	1285600	Po
 AIO73451.1	coppertranslocating Ptype ATPase 	Burkholderia multivorans	37.8	1	87883	Burkholderiaceae	Burkholderia multivorans	Burkholderiales	Burkholderia	Betaproteobacteria</textarea>
 	</div>
 	<script>
-		redraw();
+		start();
 	</script>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
